--- a/GF_glyphsets/Arabic/glyphs/CustomFilter_GF_Arabic.plist
+++ b/GF_glyphsets/Arabic/glyphs/CustomFilter_GF_Arabic.plist
@@ -345,89 +345,20 @@
 	<dict>
 		<key>list</key>
 		<array>
-			<string>hamza-ar</string>
-			<string>alef-ar</string>
-			<string>alefHamzaabove-ar</string>
-			<string>alefHamzabelow-ar</string>
-			<string>alefMadda-ar</string>
-			<string>beh-ar</string>
-			<string>peh-ar</string>
-			<string>teh-ar</string>
-			<string>theh-ar</string>
-			<string>tteh-ar</string>
-			<string>jeem-ar</string>
-			<string>tcheh-ar</string>
-			<string>hah-ar</string>
-			<string>khah-ar</string>
-			<string>dal-ar</string>
-			<string>thal-ar</string>
-			<string>ddal-ar</string>
-			<string>reh-ar</string>
-			<string>zain-ar</string>
-			<string>rreh-ar</string>
-			<string>seen-ar</string>
-			<string>sheen-ar</string>
-			<string>sad-ar</string>
-			<string>dad-ar</string>
-			<string>tah-ar</string>
-			<string>zah-ar</string>
-			<string>ain-ar</string>
-			<string>ghain-ar</string>
-			<string>feh-ar</string>
-			<string>veh-ar</string>
-			<string>fehDotmovedbelow-ar</string>
-			<string>fehThreedotsbelow-ar</string>
-			<string>qaf-ar</string>
-			<string>qafDotabove-ar</string>
-			<string>qafThreedotsabove-ar</string>
-			<string>kaf-ar</string>
-			<string>keheh-ar</string>
-			<string>kehehThreedotsabove-ar</string>
-			<string>gaf-ar</string>
-			<string>ng-ar</string>
-			<string>lam-ar</string>
-			<string>meem-ar</string>
-			<string>noon-ar</string>
-			<string>noonghunna-ar</string>
-			<string>heh-ar</string>
-			<string>hehHamzaabove-ar</string>
-			<string>hehgoal-ar</string>
-			<string>hehgoalHamzaabove-ar</string>
-			<string>hehDoachashmee-ar</string>
-			<string>tehMarbuta-ar</string>
-			<string>tehMarbutagoal-ar</string>
-			<string>waw-ar</string>
-			<string>wawHamzaabove-ar</string>
-			<string>alefMaksura-ar</string>
-			<string>yeh-ar</string>
-			<string>yehHamzaabove-ar</string>
-			<string>yehFarsi-ar</string>
-			<string>yehbarree-ar</string>
-			<string>yehbarreeHamzaabove-ar</string>
-			<string>ae-ar</string>
-			<string>kashida-ar</string>
-			<string>decimalseparator-ar</string>
-			<string>thousandseparator-ar</string>
-			<string>zero-ar</string>
-			<string>one-ar</string>
-			<string>two-ar</string>
-			<string>three-ar</string>
-			<string>four-ar</string>
-			<string>five-ar</string>
-			<string>six-ar</string>
-			<string>seven-ar</string>
-			<string>eight-ar</string>
-			<string>nine-ar</string>
-			<string>zeroFarsi-ar</string>
-			<string>oneFarsi-ar</string>
-			<string>twoFarsi-ar</string>
-			<string>threeFarsi-ar</string>
-			<string>fourFarsi-ar</string>
-			<string>fiveFarsi-ar</string>
-			<string>sixFarsi-ar</string>
-			<string>sevenFarsi-ar</string>
-			<string>eightFarsi-ar</string>
-			<string>nineFarsi-ar</string>
+			<string>space</string>
+			<string>exclam</string>
+			<string>quotedbl</string>
+			<string>numbersign</string>
+			<string>percent</string>
+			<string>quotesingle</string>
+			<string>parenleft</string>
+			<string>parenright</string>
+			<string>asterisk</string>
+			<string>plus</string>
+			<string>comma</string>
+			<string>hyphen</string>
+			<string>period</string>
+			<string>slash</string>
 			<string>zero</string>
 			<string>one</string>
 			<string>two</string>
@@ -438,47 +369,64 @@
 			<string>seven</string>
 			<string>eight</string>
 			<string>nine</string>
-			<string>space</string>
-			<string>nbspace</string>
-			<string>fullstop-ar</string>
-			<string>comma-ar</string>
-			<string>semicolon-ar</string>
-			<string>question-ar</string>
-			<string>asterisk-ar</string>
-			<string>period</string>
 			<string>colon</string>
-			<string>ellipsis</string>
-			<string>exclam</string>
-			<string>asterisk</string>
-			<string>numbersign</string>
-			<string>slash</string>
-			<string>backslash</string>
-			<string>hyphen</string>
-			<string>parenleft</string>
-			<string>parenright</string>
-			<string>braceleft</string>
-			<string>braceright</string>
-			<string>bracketleft</string>
-			<string>bracketright</string>
-			<string>quotedblleft</string>
-			<string>quotedblright</string>
-			<string>quoteleft</string>
-			<string>quoteright</string>
-			<string>guillemetleft</string>
-			<string>guillemetright</string>
-			<string>quotedbl</string>
-			<string>quotesingle</string>
-			<string>percent-ar</string>
-			<string>bar</string>
-			<string>plus</string>
-			<string>multiply</string>
-			<string>divide</string>
+			<string>less</string>
 			<string>equal</string>
 			<string>greater</string>
-			<string>less</string>
-			<string>percent</string>
-			<string>hamzaabove-ar</string>
-			<string>hamzabelow-ar</string>
+			<string>bracketleft</string>
+			<string>backslash</string>
+			<string>bracketright</string>
+			<string>braceleft</string>
+			<string>bar</string>
+			<string>braceright</string>
+			<string>nbspace</string>
+			<string>guillemetleft</string>
+			<string>guillemetright</string>
+			<string>multiply</string>
+			<string>divide</string>
+			<string>perthousand-ar</string>
+			<string>comma-ar</string>
+			<string>dateseparator-ar</string>
+			<string>semicolon-ar</string>
+			<string>mark-ar</string>
+			<string>question-ar</string>
+			<string>hamza-ar</string>
+			<string>alefMadda-ar</string>
+			<string>alefHamzaabove-ar</string>
+			<string>wawHamzaabove-ar</string>
+			<string>alefHamzabelow-ar</string>
+			<string>yehHamzaabove-ar</string>
+			<string>alef-ar</string>
+			<string>beh-ar</string>
+			<string>tehMarbuta-ar</string>
+			<string>teh-ar</string>
+			<string>theh-ar</string>
+			<string>jeem-ar</string>
+			<string>hah-ar</string>
+			<string>khah-ar</string>
+			<string>dal-ar</string>
+			<string>thal-ar</string>
+			<string>reh-ar</string>
+			<string>zain-ar</string>
+			<string>seen-ar</string>
+			<string>sheen-ar</string>
+			<string>sad-ar</string>
+			<string>dad-ar</string>
+			<string>tah-ar</string>
+			<string>zah-ar</string>
+			<string>ain-ar</string>
+			<string>ghain-ar</string>
+			<string>kashida-ar</string>
+			<string>feh-ar</string>
+			<string>qaf-ar</string>
+			<string>kaf-ar</string>
+			<string>lam-ar</string>
+			<string>meem-ar</string>
+			<string>noon-ar</string>
+			<string>heh-ar</string>
+			<string>waw-ar</string>
+			<string>alefMaksura-ar</string>
+			<string>yeh-ar</string>
 			<string>fathatan-ar</string>
 			<string>dammatan-ar</string>
 			<string>kasratan-ar</string>
@@ -488,7 +436,60 @@
 			<string>shadda-ar</string>
 			<string>sukun-ar</string>
 			<string>madda-ar</string>
-			<string>uni069COVE</string>
+			<string>hamzaabove-ar</string>
+			<string>hamzabelow-ar</string>
+			<string>zero-ar</string>
+			<string>one-ar</string>
+			<string>two-ar</string>
+			<string>three-ar</string>
+			<string>four-ar</string>
+			<string>five-ar</string>
+			<string>six-ar</string>
+			<string>seven-ar</string>
+			<string>eight-ar</string>
+			<string>nine-ar</string>
+			<string>percent-ar</string>
+			<string>decimalseparator-ar</string>
+			<string>thousandseparator-ar</string>
+			<string>asterisk-ar</string>
+			<string>alefabove-ar</string>
+			<string>tteh-ar</string>
+			<string>peh-ar</string>
+			<string>tcheh-ar</string>
+			<string>ddal-ar</string>
+			<string>rreh-ar</string>
+			<string>jeh-ar</string>
+			<string>keheh-ar</string>
+			<string>gaf-ar</string>
+			<string>hehDoachashmee-ar</string>
+			<string>hehgoal-ar</string>
+			<string>yeh-farsi</string>
+			<string>yehbarree-ar</string>
+			<string>fullstop-ar</string>
+			<string>zero-persian</string>
+			<string>one-persian</string>
+			<string>two-persian</string>
+			<string>three-persian</string>
+			<string>four-persian</string>
+			<string>five-persian</string>
+			<string>six-persian</string>
+			<string>seven-persian</string>
+			<string>eight-persian</string>
+			<string>nine-persian</string>
+			<string>kehehThreedotsabove-ar</string>
+			<string>lefttorightmark</string>
+			<string>endash</string>
+			<string>emdash</string>
+			<string>quoteleft</string>
+			<string>quoteright</string>
+			<string>quotedblleft</string>
+			<string>quotedblright</string>
+			<string>ellipsis</string>
+			<string>guilsinglleft</string>
+			<string>guilsinglright</string>
+			<string>minus</string>
+			<string>parenleft-ar</string>
+			<string>parenright-ar</string>
 		</array>
 		<key>name</key>
 		<string>GF_Arabic_Core</string>
@@ -496,49 +497,135 @@
 	<dict>
 		<key>list</key>
 		<array>
-			<string>highhamza-ar</string>
-			<string>beeh-ar</string>
-			<string>beheh-ar</string>
+			<string>exclam</string>
+			<string>percent</string>
+			<string>quotesingle</string>
+			<string>parenleft</string>
+			<string>parenright</string>
+			<string>plus</string>
+			<string>comma</string>
+			<string>hyphen</string>
+			<string>period</string>
+			<string>slash</string>
+			<string>zero</string>
+			<string>one</string>
+			<string>two</string>
+			<string>three</string>
+			<string>four</string>
+			<string>five</string>
+			<string>six</string>
+			<string>seven</string>
+			<string>eight</string>
+			<string>nine</string>
+			<string>colon</string>
+			<string>semicolon</string>
+			<string>bracketleft</string>
+			<string>bracketright</string>
+			<string>perthousand-ar</string>
+			<string>comma-ar</string>
+			<string>hamza-ar</string>
+			<string>alefMadda-ar</string>
+			<string>alefHamzaabove-ar</string>
+			<string>wawHamzaabove-ar</string>
+			<string>yehHamzaabove-ar</string>
+			<string>alef-ar</string>
+			<string>beh-ar</string>
+			<string>tehMarbuta-ar</string>
+			<string>teh-ar</string>
+			<string>theh-ar</string>
+			<string>jeem-ar</string>
+			<string>hah-ar</string>
+			<string>khah-ar</string>
+			<string>dal-ar</string>
+			<string>thal-ar</string>
+			<string>reh-ar</string>
+			<string>zain-ar</string>
+			<string>seen-ar</string>
+			<string>sheen-ar</string>
+			<string>sad-ar</string>
+			<string>dad-ar</string>
+			<string>tah-ar</string>
+			<string>zah-ar</string>
+			<string>ain-ar</string>
+			<string>ghain-ar</string>
+			<string>feh-ar</string>
+			<string>qaf-ar</string>
+			<string>kaf-ar</string>
+			<string>lam-ar</string>
+			<string>meem-ar</string>
+			<string>noon-ar</string>
+			<string>heh-ar</string>
+			<string>waw-ar</string>
+			<string>alefMaksura-ar</string>
+			<string>yeh-ar</string>
+			<string>fathatan-ar</string>
+			<string>dammatan-ar</string>
+			<string>kasratan-ar</string>
+			<string>fatha-ar</string>
+			<string>damma-ar</string>
+			<string>kasra-ar</string>
+			<string>shadda-ar</string>
+			<string>sukun-ar</string>
+			<string>hamzaabove-ar</string>
+			<string>zero-ar</string>
+			<string>one-ar</string>
+			<string>two-ar</string>
+			<string>three-ar</string>
+			<string>four-ar</string>
+			<string>five-ar</string>
+			<string>six-ar</string>
+			<string>seven-ar</string>
+			<string>eight-ar</string>
+			<string>nine-ar</string>
+			<string>percent-ar</string>
+			<string>decimalseparator-ar</string>
+			<string>thousandseparator-ar</string>
+			<string>alefabove-ar</string>
 			<string>tehRing-ar</string>
-			<string>tehThreedotsdown-ar</string>
-			<string>tteheh-ar</string>
-			<string>teheh-ar</string>
-			<string>tcheheh-ar</string>
-			<string>nyeh-ar</string>
-			<string>dyeh-ar</string>
+			<string>peh-ar</string>
 			<string>hahHamzaabove-ar</string>
 			<string>hahThreedotsabove-ar</string>
-			<string>dahal-ar</string>
-			<string>ddahal-ar</string>
+			<string>tcheh-ar</string>
 			<string>dalRing-ar</string>
-			<string>dalDotbelow-ar</string>
-			<string>dalThreedotsdown-ar</string>
 			<string>rehRing-ar</string>
 			<string>rehVbelow-ar</string>
 			<string>rehDotbelowdotabove-ar</string>
-			<string>rehFourdots-ar</string>
+			<string>jeh-ar</string>
 			<string>seenDotbelowDotabove-ar</string>
-			<string>sheenThreedotsbelow-ar</string>
-			<string>ainThreedots-ar</string>
-			<string>peheh-ar</string>
-			<string>kehehDotabove-ar</string>
-			<string>kafswash-ar</string>
+			<string>veh-ar</string>
+			<string>keheh-ar</string>
 			<string>kafRing-ar</string>
-			<string>ngoeh-ar</string>
-			<string>gueh-ar</string>
+			<string>ng-ar</string>
+			<string>gaf-ar</string>
 			<string>lamVabove-ar</string>
-			<string>rnoon-ar</string>
 			<string>noonRing-ar</string>
-			<string>noonThreedotsabove-ar</string>
-			<string>wawDotabove-ar</string>
+			<string>hehDoachashmee-ar</string>
 			<string>oe-ar</string>
 			<string>u-ar</string>
 			<string>yu-ar</string>
 			<string>ve-ar</string>
-			<string>yehVabove-ar</string>
+			<string>yeh-farsi</string>
 			<string>yehTail-ar</string>
+			<string>yehVabove-ar</string>
 			<string>e-ar</string>
-			<string>fathaHorizont-ar</string>
+			<string>fullstop-ar</string>
+			<string>ae-ar</string>
+			<string>zero-persian</string>
+			<string>one-persian</string>
+			<string>two-persian</string>
+			<string>three-persian</string>
+			<string>four-persian</string>
+			<string>five-persian</string>
+			<string>six-persian</string>
+			<string>seven-persian</string>
+			<string>eight-persian</string>
+			<string>nine-persian</string>
+			<string>sindhiampersand-ar</string>
+			<string>sindhipostpositionmen-ar</string>
+			<string>lefttorightmark</string>
+			<string>righttoleftmark</string>
+			<string>quoteleft</string>
+			<string>minus</string>
 		</array>
 		<key>name</key>
 		<string>GF_Arabic_Plus</string>
