--- a/GF_glyphsets/Cyrillic/glyphs/CustomFilter_GF_Cyrillic.plist
+++ b/GF_glyphsets/Cyrillic/glyphs/CustomFilter_GF_Cyrillic.plist
@@ -345,23 +345,33 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>Iegrave-cy</string>
+			<string>Io-cy</string>
+			<string>Dje-cy</string>
+			<string>Gje-cy</string>
+			<string>E-cy</string>
+			<string>Dze-cy</string>
+			<string>I-cy</string>
+			<string>Yi-cy</string>
+			<string>Je-cy</string>
+			<string>Lje-cy</string>
+			<string>Nje-cy</string>
+			<string>Tshe-cy</string>
+			<string>Kje-cy</string>
+			<string>Iigrave-cy</string>
+			<string>Ushort-cy</string>
+			<string>Dzhe-cy</string>
 			<string>A-cy</string>
 			<string>Be-cy</string>
 			<string>Ve-cy</string>
 			<string>Ge-cy</string>
-			<string>Gje-cy</string>
-			<string>Geupturn-cy</string>
 			<string>De-cy</string>
 			<string>Ie-cy</string>
-			<string>Iegrave-cy</string>
-			<string>Io-cy</string>
 			<string>Zhe-cy</string>
 			<string>Ze-cy</string>
 			<string>Ii-cy</string>
 			<string>Iishort-cy</string>
-			<string>Iigrave-cy</string>
 			<string>Ka-cy</string>
-			<string>Kje-cy</string>
 			<string>El-cy</string>
 			<string>Em-cy</string>
 			<string>En-cy</string>
@@ -371,46 +381,29 @@
 			<string>Es-cy</string>
 			<string>Te-cy</string>
 			<string>U-cy</string>
-			<string>Ushort-cy</string>
 			<string>Ef-cy</string>
 			<string>Ha-cy</string>
-			<string>Che-cy</string>
 			<string>Tse-cy</string>
+			<string>Che-cy</string>
 			<string>Sha-cy</string>
 			<string>Shcha-cy</string>
-			<string>Dzhe-cy</string>
-			<string>Softsign-cy</string>
-			<string>Yeru-cy</string>
 			<string>Hardsign-cy</string>
-			<string>Lje-cy</string>
-			<string>Nje-cy</string>
-			<string>Dze-cy</string>
-			<string>E-cy</string>
+			<string>Yeru-cy</string>
+			<string>Softsign-cy</string>
 			<string>Ereversed-cy</string>
-			<string>I-cy</string>
-			<string>Yi-cy</string>
-			<string>Je-cy</string>
-			<string>Tshe-cy</string>
-			<string>Yu-cy</string>
-			<string>Ya-cy</string>
-			<string>Dje-cy</string>
+			<string>Iu-cy</string>
+			<string>Ia-cy</string>
 			<string>a-cy</string>
 			<string>be-cy</string>
 			<string>ve-cy</string>
 			<string>ge-cy</string>
-			<string>gje-cy</string>
-			<string>geupturn-cy</string>
 			<string>de-cy</string>
 			<string>ie-cy</string>
-			<string>iegrave-cy</string>
-			<string>io-cy</string>
 			<string>zhe-cy</string>
 			<string>ze-cy</string>
 			<string>ii-cy</string>
 			<string>iishort-cy</string>
-			<string>iigrave-cy</string>
 			<string>ka-cy</string>
-			<string>kje-cy</string>
 			<string>el-cy</string>
 			<string>em-cy</string>
 			<string>en-cy</string>
@@ -420,29 +413,36 @@
 			<string>es-cy</string>
 			<string>te-cy</string>
 			<string>u-cy</string>
-			<string>ushort-cy</string>
 			<string>ef-cy</string>
 			<string>ha-cy</string>
-			<string>che-cy</string>
 			<string>tse-cy</string>
+			<string>che-cy</string>
 			<string>sha-cy</string>
 			<string>shcha-cy</string>
-			<string>dzhe-cy</string>
-			<string>softsign-cy</string>
-			<string>yeru-cy</string>
 			<string>hardsign-cy</string>
-			<string>lje-cy</string>
-			<string>nje-cy</string>
-			<string>dze-cy</string>
-			<string>e-cy</string>
+			<string>yeru-cy</string>
+			<string>softsign-cy</string>
 			<string>ereversed-cy</string>
+			<string>iu-cy</string>
+			<string>ia-cy</string>
+			<string>iegrave-cy</string>
+			<string>io-cy</string>
+			<string>dje-cy</string>
+			<string>gje-cy</string>
+			<string>e-cy</string>
+			<string>dze-cy</string>
 			<string>i-cy</string>
 			<string>yi-cy</string>
 			<string>je-cy</string>
+			<string>lje-cy</string>
+			<string>nje-cy</string>
 			<string>tshe-cy</string>
-			<string>yu-cy</string>
-			<string>ya-cy</string>
-			<string>dje-cy</string>
+			<string>kje-cy</string>
+			<string>iigrave-cy</string>
+			<string>ushort-cy</string>
+			<string>dzhe-cy</string>
+			<string>Gheupturn-cy</string>
+			<string>gheupturn-cy</string>
 			<string>numero</string>
 		</array>
 		<key>name</key>
@@ -451,42 +451,42 @@
 	<dict>
 		<key>list</key>
 		<array>
-			<string>OmegaBroad-cy</string>
 			<string>Omega-cy</string>
-			<string>Eiotified-cy</string>
-			<string>Yuslittle-cy</string>
-			<string>Yuslittleiotified-cy</string>
-			<string>Yusbigiotified-cy</string>
-			<string>Ksi-cy</string>
-			<string>Psi-cy</string>
-			<string>Izhitsadblgrave-cy</string>
-			<string>Uk-cy</string>
-			<string>Koppa-cy</string>
 			<string>omega-cy</string>
+			<string>Eiotified-cy</string>
 			<string>eiotified-cy</string>
+			<string>Yuslittle-cy</string>
 			<string>yuslittle-cy</string>
+			<string>Yuslittleiotified-cy</string>
 			<string>yuslittleiotified-cy</string>
+			<string>Yusbigiotified-cy</string>
 			<string>yusbigiotified-cy</string>
+			<string>Ksi-cy</string>
 			<string>ksi-cy</string>
+			<string>Psi-cy</string>
 			<string>psi-cy</string>
+			<string>Izhitsadblgrave-cy</string>
 			<string>izhitsadblgrave-cy</string>
+			<string>Uk-cy</string>
 			<string>uk-cy</string>
-			<string>koppa-cy</string>
-			<string>omegaBroad-cy</string>
-			<string>thousand-cy</string>
-			<string>hundredthousandssigncomb-cy</string>
-			<string>millionssigncomb-cy</string>
-			<string>titlocomb-cy</string>
-			<string>palatalizationcomb-cy</string>
-			<string>dasiapneumatacomb-cy</string>
-			<string>psilipneumatacomb-cy</string>
-			<string>pokrytiecomb-cy</string>
 			<string>uni047A</string>
 			<string>uni047B</string>
 			<string>uni047C</string>
 			<string>uni047D</string>
 			<string>uni047E</string>
 			<string>uni047F</string>
+			<string>Koppa-cy</string>
+			<string>koppa-cy</string>
+			<string>thousand-cy</string>
+			<string>titlocomb-cy</string>
+			<string>palatalizationcomb-cy</string>
+			<string>dasiapneumatacomb-cy</string>
+			<string>psilipneumatacomb-cy</string>
+			<string>pokrytiecomb-cy</string>
+			<string>hundredthousandssigncomb-cy</string>
+			<string>millionssigncomb-cy</string>
+			<string>OmegaBroad-cy</string>
+			<string>omegaBroad-cy</string>
 		</array>
 		<key>name</key>
 		<string>GF_Cyrillic_Historical</string>
@@ -494,114 +494,108 @@
 	<dict>
 		<key>list</key>
 		<array>
-			<string>Gedescender-cy</string>
-			<string>Gestroke-cy</string>
-			<string>Gemiddlehook-cy</string>
-			<string>Yat-cy</string>
-			<string>Yusbig-cy</string>
-			<string>Fita-cy</string>
-			<string>Izhitsa-cy</string>
-			<string>Zhedescender-cy</string>
-			<string>Zedescender-cy</string>
-			<string>Kadescender-cy</string>
-			<string>Kaverticalstroke-cy</string>
-			<string>Kabashkir-cy</string>
-			<string>Endescender-cy</string>
-			<string>EnGe-cy</string>
-			<string>Esdescender-cy</string>
-			<string>Ustraight-cy</string>
-			<string>Ustraightstroke-cy</string>
-			<string>Hadescender-cy</string>
-			<string>Chedescender-cy</string>
-			<string>Cheverticalstroke-cy</string>
-			<string>Shha-cy</string>
-			<string>Palochka-cy</string>
-			<string>Zhebreve-cy</string>
-			<string>Chekhakassian-cy</string>
-			<string>Abreve-cy</string>
-			<string>Adieresis-cy</string>
-			<string>Aie-cy</string>
-			<string>Iebreve-cy</string>
-			<string>Schwa-cy</string>
-			<string>Zhedieresis-cy</string>
-			<string>Zedieresis-cy</string>
-			<string>Imacron-cy</string>
-			<string>Idieresis-cy</string>
-			<string>Odieresis-cy</string>
-			<string>Obarred-cy</string>
-			<string>Umacron-cy</string>
-			<string>Udieresis-cy</string>
-			<string>Uhungarumlaut-cy</string>
-			<string>Chedieresis-cy</string>
-			<string>Yerudieresis-cy</string>
-			<string>Qa-cy</string>
-			<string>We-cy</string>
-			<string>gedescender-cy</string>
-			<string>gestroke-cy</string>
-			<string>gemiddlehook-cy</string>
-			<string>yat-cy</string>
-			<string>yusbig-cy</string>
-			<string>fita-cy</string>
-			<string>izhitsa-cy</string>
-			<string>zhedescender-cy</string>
-			<string>zedescender-cy</string>
-			<string>kadescender-cy</string>
-			<string>kaverticalstroke-cy</string>
-			<string>kabashkir-cy</string>
-			<string>endescender-cy</string>
-			<string>enge-cy</string>
-			<string>esdescender-cy</string>
-			<string>ustraight-cy</string>
-			<string>ustraightstroke-cy</string>
-			<string>hadescender-cy</string>
-			<string>chedescender-cy</string>
-			<string>cheverticalstroke-cy</string>
-			<string>shha-cy</string>
-			<string>palochka-cy</string>
-			<string>zhebreve-cy</string>
-			<string>chekhakassian-cy</string>
-			<string>abreve-cy</string>
-			<string>adieresis-cy</string>
-			<string>aie-cy</string>
-			<string>iebreve-cy</string>
-			<string>schwa-cy</string>
-			<string>zhedieresis-cy</string>
-			<string>zedieresis-cy</string>
-			<string>imacron-cy</string>
-			<string>idieresis-cy</string>
-			<string>odieresis-cy</string>
-			<string>obarred-cy</string>
-			<string>umacron-cy</string>
-			<string>udieresis-cy</string>
-			<string>uhungarumlaut-cy</string>
-			<string>chedieresis-cy</string>
-			<string>yerudieresis-cy</string>
-			<string>qa-cy</string>
-			<string>we-cy</string>
-			<string>hryvnia</string>
-			<string>tenge</string>
-			<string>tugrik</string>
-			<string>brevecomb-cy</string>
-			<string>dieresiscomb</string>
+			<string>apostrophemod</string>
 			<string>gravecomb</string>
 			<string>acutecomb</string>
-			<string>hungarumlautcomb</string>
 			<string>macroncomb</string>
-			<string>apostrophemod</string>
-		</array>
-		<key>name</key>
-		<string>GF_Cyrillic_Plus</string>
-	</dict>
-	<dict>
-		<key>list</key>
-		<array>
+			<string>dieresiscomb</string>
+			<string>hungarumlautcomb</string>
+			<string>Yat-cy</string>
+			<string>yat-cy</string>
+			<string>Yusbig-cy</string>
+			<string>yusbig-cy</string>
+			<string>Fita-cy</string>
+			<string>fita-cy</string>
+			<string>Izhitsa-cy</string>
+			<string>izhitsa-cy</string>
+			<string>Ghestroke-cy</string>
+			<string>ghestroke-cy</string>
+			<string>Ghemiddlehook-cy</string>
+			<string>ghemiddlehook-cy</string>
+			<string>Zhedescender-cy</string>
+			<string>zhedescender-cy</string>
+			<string>Zedescender-cy</string>
+			<string>zedescender-cy</string>
+			<string>Kadescender-cy</string>
+			<string>kadescender-cy</string>
+			<string>Kaverticalstroke-cy</string>
+			<string>kaverticalstroke-cy</string>
+			<string>Kabashkir-cy</string>
+			<string>kabashkir-cy</string>
+			<string>Endescender-cy</string>
+			<string>endescender-cy</string>
+			<string>Enghe-cy</string>
+			<string>enghe-cy</string>
+			<string>Esdescender-cy</string>
+			<string>esdescender-cy</string>
+			<string>Ustraight-cy</string>
+			<string>ustraight-cy</string>
+			<string>Ustraightstroke-cy</string>
+			<string>ustraightstroke-cy</string>
+			<string>Hadescender-cy</string>
+			<string>hadescender-cy</string>
+			<string>Chedescender-cy</string>
+			<string>chedescender-cy</string>
+			<string>Cheverticalstroke-cy</string>
+			<string>cheverticalstroke-cy</string>
+			<string>Shha-cy</string>
+			<string>shha-cy</string>
+			<string>Palochka-cy</string>
+			<string>Zhebreve-cy</string>
+			<string>zhebreve-cy</string>
+			<string>Chekhakassian-cy</string>
+			<string>chekhakassian-cy</string>
+			<string>palochka-cy</string>
+			<string>Abreve-cy</string>
+			<string>abreve-cy</string>
+			<string>Adieresis-cy</string>
+			<string>adieresis-cy</string>
+			<string>Aie-cy</string>
+			<string>aie-cy</string>
+			<string>Iebreve-cy</string>
+			<string>iebreve-cy</string>
+			<string>Schwa-cy</string>
+			<string>schwa-cy</string>
+			<string>Zhedieresis-cy</string>
+			<string>zhedieresis-cy</string>
+			<string>Zedieresis-cy</string>
+			<string>zedieresis-cy</string>
+			<string>Imacron-cy</string>
+			<string>imacron-cy</string>
+			<string>Idieresis-cy</string>
+			<string>idieresis-cy</string>
+			<string>Odieresis-cy</string>
+			<string>odieresis-cy</string>
+			<string>Obarred-cy</string>
+			<string>obarred-cy</string>
+			<string>Umacron-cy</string>
+			<string>umacron-cy</string>
+			<string>Udieresis-cy</string>
+			<string>udieresis-cy</string>
+			<string>Uhungarumlaut-cy</string>
+			<string>uhungarumlaut-cy</string>
+			<string>Chedieresis-cy</string>
+			<string>chedieresis-cy</string>
+			<string>Gedescender-cy</string>
+			<string>gedescender-cy</string>
+			<string>Yerudieresis-cy</string>
+			<string>yerudieresis-cy</string>
+			<string>Qa-cy</string>
+			<string>qa-cy</string>
+			<string>We-cy</string>
+			<string>we-cy</string>
+			<string>tugrik</string>
+			<string>hryvnia</string>
+			<string>tenge</string>
+			<string>gestroke-cy.loclBSH</string>
+			<string>yu-cy.loclBGR</string>
+			<string>Gestroke-cy.loclBSH</string>
 			<string>De-cy.loclBGR</string>
 			<string>Ii-cy.loclBGR</string>
 			<string>Iishort-cy.loclBGR</string>
 			<string>Iigrave-cy.loclBGR</string>
 			<string>El-cy.loclBGR</string>
 			<string>Ef-cy.loclBGR</string>
-			<string>Gestroke-cy.loclBSH</string>
 			<string>Zedescender-cy.loclBSH</string>
 			<string>Esdescender-cy.loclBSH</string>
 			<string>Esdescender-cy.loclCHU</string>
@@ -610,21 +604,31 @@
 			<string>de-cy.loclBGR</string>
 			<string>zhe-cy.loclBGR</string>
 			<string>ze-cy.loclBGR</string>
+			<string>ii-cy.loclBGR</string>
+			<string>iishort-cy.loclBGR</string>
+			<string>iigrave-cy.loclBGR</string>
 			<string>ka-cy.loclBGR</string>
 			<string>el-cy.loclBGR</string>
 			<string>en-cy.loclBGR</string>
-			<string>yu-cy.loclBGR</string>
-			<string>gestroke-cy.loclBSH</string>
+			<string>pe-cy.loclBGR</string>
+			<string>te-cy.loclBGR</string>
+			<string>che-cy.loclBGR</string>
+			<string>tse-cy.loclBGR</string>
+			<string>sha-cy.loclBGR</string>
+			<string>shcha-cy.loclBGR</string>
+			<string>softsign-cy.loclBGR</string>
+			<string>hardsign-cy.loclBGR</string>
 			<string>zedescender-cy.loclBSH</string>
 			<string>esdescender-cy.loclBSH</string>
 			<string>esdescender-cy.loclCHU</string>
-			<string>gje-cy.loclMKD</string>
 			<string>be-cy.loclSRB</string>
-			<string>ge-cy.loclSRB</string>
-			<string>de-cy.loclSRB</string>
-			<string>pe-cy.loclSRB</string>
-			<string>te-cy.loclSRB</string>
 		</array>
+		<key>name</key>
+		<string>GF_Cyrillic_Plus</string>
+	</dict>
+	<dict>
+		<key>list</key>
+		<array/>
 		<key>name</key>
 		<string>GF_Cyrillic_PlusLoclItalic</string>
 	</dict>
@@ -673,61 +677,61 @@
 	<dict>
 		<key>list</key>
 		<array>
-			<string>Gemiddlehook-cy</string>
-			<string>gemiddlehook-cy</string>
 			<string>Iishorttail-cy</string>
-			<string>Kastroke-cy</string>
-			<string>Pedescender-cy</string>
-			<string>Haabkhasian-cy</string>
-			<string>Tedescender-cy</string>
-			<string>Tetse-cy</string>
-			<string>Shhadescender-cy</string>
-			<string>Cheabkhasian-cy</string>
-			<string>Chedescenderabkhasian-cy</string>
-			<string>Kahook-cy</string>
-			<string>Eltail-cy</string>
-			<string>Enhook-cy</string>
-			<string>Entail-cy</string>
-			<string>Emtail-cy</string>
-			<string>Schwadieresis-cy</string>
-			<string>Dzeabkhasian-cy</string>
-			<string>Obarreddieresis-cy</string>
-			<string>Edieresis-cy</string>
-			<string>Gestrokehook-cy</string>
-			<string>Hahook-cy</string>
-			<string>Hastroke-cy</string>
-			<string>Reversedze-cy</string>
-			<string>Elhook-cy</string>
-			<string>Semisoftsign-cy</string>
-			<string>Ertick-cy</string>
-			<string>EnLeftHook-cy</string>
-			<string>Eldescender-cy</string>
 			<string>iishorttail-cy</string>
-			<string>kastroke-cy</string>
-			<string>pedescender-cy</string>
-			<string>haabkhasian-cy</string>
-			<string>tedescender-cy</string>
-			<string>tetse-cy</string>
-			<string>shhadescender-cy</string>
-			<string>cheabkhasian-cy</string>
-			<string>chedescenderabkhasian-cy</string>
-			<string>kahook-cy</string>
-			<string>eltail-cy</string>
-			<string>enhook-cy</string>
-			<string>entail-cy</string>
-			<string>emtail-cy</string>
-			<string>schwadieresis-cy</string>
-			<string>dzeabkhasian-cy</string>
-			<string>obarreddieresis-cy</string>
-			<string>edieresis-cy</string>
-			<string>gestrokehook-cy</string>
-			<string>hahook-cy</string>
-			<string>hastroke-cy</string>
-			<string>reversedze-cy</string>
-			<string>elhook-cy</string>
+			<string>Semisoftsign-cy</string>
 			<string>semisoftsign-cy</string>
+			<string>Ertick-cy</string>
 			<string>ertick-cy</string>
+			<string>Ghemiddlehook-cy</string>
+			<string>ghemiddlehook-cy</string>
+			<string>Kastroke-cy</string>
+			<string>kastroke-cy</string>
+			<string>Haabkhasian-cy</string>
+			<string>haabkhasian-cy</string>
+			<string>Tedescender-cy</string>
+			<string>tedescender-cy</string>
+			<string>Tetse-cy</string>
+			<string>tetse-cy</string>
+			<string>Cheabkhasian-cy</string>
+			<string>cheabkhasian-cy</string>
+			<string>Chedescenderabkhasian-cy</string>
+			<string>chedescenderabkhasian-cy</string>
+			<string>Kahook-cy</string>
+			<string>kahook-cy</string>
+			<string>Eltail-cy</string>
+			<string>eltail-cy</string>
+			<string>Enhook-cy</string>
+			<string>enhook-cy</string>
+			<string>Entail-cy</string>
+			<string>entail-cy</string>
+			<string>Emtail-cy</string>
+			<string>emtail-cy</string>
+			<string>Schwadieresis-cy</string>
+			<string>schwadieresis-cy</string>
+			<string>Dzeabkhasian-cy</string>
+			<string>dzeabkhasian-cy</string>
+			<string>Obarreddieresis-cy</string>
+			<string>obarreddieresis-cy</string>
+			<string>Edieresis-cy</string>
+			<string>edieresis-cy</string>
+			<string>Gestrokehook-cy</string>
+			<string>gestrokehook-cy</string>
+			<string>Hahook-cy</string>
+			<string>hahook-cy</string>
+			<string>Hastroke-cy</string>
+			<string>hastroke-cy</string>
+			<string>Reversedze-cy</string>
+			<string>reversedze-cy</string>
+			<string>Elhook-cy</string>
+			<string>elhook-cy</string>
+			<string>Pedescender-cy</string>
+			<string>pedescender-cy</string>
+			<string>Shhadescender-cy</string>
+			<string>shhadescender-cy</string>
+			<string>EnLeftHook-cy</string>
 			<string>enlefthook-cy</string>
+			<string>Eldescender-cy</string>
 			<string>eldescender-cy</string>
 		</array>
 		<key>name</key>
